Some unfinished stuff with playoff things, but also, added isDev thing so we can do special stuffs in the program without worrying about breaking

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ROOT/resources/garbage
 ROOT/resources/trash
 ROOT/resources/parsematches.php
 ROOT/resources/parseteams.php
+ROOT/resources/isDev.jsp
